--- a/client/src/styles/mixins.scss
+++ b/client/src/styles/mixins.scss
@@ -1,5 +1,5 @@
 @mixin font-base {
-    font-family: Ubuntu Mono, sans-serif;
+    font-family: Ubuntu Mono, monospace;
     font-style: normal;
 }
 
