--- a/client/src/App/App.scss
+++ b/client/src/App/App.scss
@@ -1,3 +1,10 @@
 .app {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
+    .content {
+        width: 100%;
+        max-width: 1150px;
+    }
 }
