--- a/client/src/styles/variables.scss
+++ b/client/src/styles/variables.scss
@@ -1,12 +1,14 @@
-$font-size-xs: 14px;
-$font-size-sm: 18px;
-$font-size-md: 20px;
+$font-size-xxs: 14px;
+$font-size-xs: 18px;
+$font-size-sm: 20px;
+$font-size-md: 24px;
 $font-size-lg: 32px;
 $font-size-xl: 40px;
 $font-size-xxl: 60px;
 $font-size-xxxl: 80px;
 
 $font-size-map: (
+    xxs: $font-size-xxs,
     xs: $font-size-xs,
     sm: $font-size-sm,
     md: $font-size-md,
@@ -21,7 +23,7 @@ $font-weight-map: (
     bold: bold,
 );
 
-$clr-white: white;
+$clr-white: #FFFFFF;
 $clr-black: #000000;
 
 $clr-god: #78dcfd;
