--- a/client/src/styles/variables.scss
+++ b/client/src/styles/variables.scss
@@ -23,8 +23,9 @@ $font-weight-map: (
     bold: bold,
 );
 
-$clr-white: #FFFFFF;
+$clr-white: #ffffff;
 $clr-black: #000000;
+$clr-gray: #616161;
 
 $clr-god: #78dcfd;
 $clr-legendary: #a993e0;
