--- a/client/src/components/header/Header.scss
+++ b/client/src/components/header/Header.scss
@@ -4,6 +4,7 @@
     position: sticky;
     top: 0;
     display: flex;
+    z-index: 2;
     justify-content: space-between;
     align-items: center;
     background-color: $clr-white;
