token component, router, pages

--- a/client/src/styles/variables.scss
+++ b/client/src/styles/variables.scss
@@ -26,6 +26,7 @@ $font-weight-map: (
 $clr-white: #ffffff;
 $clr-black: #000000;
 $clr-gray: #616161;
+$clr-blue: #2a6fd6;
 
 $clr-god: #78dcfd;
 $clr-legendary: #a993e0;
