--- a/client/src/components/about/About.scss
+++ b/client/src/components/about/About.scss
@@ -5,8 +5,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
-    padding: 0 80px;
+    padding: 0 16px;
 
     .title {
         margin-bottom: 60px;
@@ -15,6 +14,7 @@
 
     .description {
         @include font(md, $clr-gray);
+        text-align: center;
 
         p:not(:last-child) {
             margin-bottom: 30px;
