--- a/client/src/app/App.scss
+++ b/client/src/app/App.scss
@@ -2,7 +2,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 32px;
 
     .content {
         width: 100%;
@@ -15,5 +14,10 @@
             width: 100%;
             margin-bottom: 100px;
         }
+    }
+
+    .footer {
+        width: 100%;
+        margin-top: 100px;
     }
 }
