--- a/client/src/components/header/Header.scss
+++ b/client/src/components/header/Header.scss
@@ -8,6 +8,7 @@
     justify-content: space-between;
     align-items: center;
     background-color: $clr-white;
+    padding: 0 32px;
 
     .logoNav {
         display: flex;
@@ -19,6 +20,7 @@
             display: flex;
             align-items: center;
             flex: 1;
+            cursor: pointer;
 
             .logo {
                 height: 36px;
@@ -35,9 +37,8 @@
         .options {
             display: flex;
             justify-content: space-between;
+            align-items: center;
             flex: 1.3;
-
-            padding: 40px 0;
 
             .option {
                 @include font(xs);
@@ -57,7 +58,7 @@
 
 @media (max-width: 1150px) {
     .header {
-        padding: 32px 45px;
+        padding: 24px;
 
         .logoNav {
             .options {
