--- a/client/src/components/rules/Rules.scss
+++ b/client/src/components/rules/Rules.scss
@@ -5,10 +5,12 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 0 16px;
 
     .title {
         margin-bottom: 60px;
         @include font(xl, $clr-black, bold);
+        text-align: center;
     }
 
     .rulesBlock {
@@ -18,7 +20,6 @@
         .rule {
             display: flex;
             flex-direction: column;
-            justify-content: center;
 
             > * {
                 margin-bottom: 16px;
