--- a/client/src/components/whatAreNftCoffins/WhatAreNftCoffins.scss
+++ b/client/src/components/whatAreNftCoffins/WhatAreNftCoffins.scss
@@ -5,12 +5,12 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 0 50px;
-    max-width: 900px;
+    padding: 0 16px;
 
     .title {
         margin-bottom: 60px;
         @include font(xl, $clr-black, bold);
+        text-align: center;
     }
 
     .points {
