--- a/client/src/shared/components/openSeaLink/OpenSeaLink.scss
+++ b/client/src/shared/components/openSeaLink/OpenSeaLink.scss
@@ -7,6 +7,7 @@
     align-items: center;
 
     width: 220px;
+    height: 81px;
 
     img {
         position: absolute;
@@ -16,6 +17,11 @@
     }
 
     a {
+        height: 100%;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
         position: relative;
         z-index: 1;
         @include font(xs, $clr-black, bold);
