--- a/client/src/components/rules/Rules.scss
+++ b/client/src/components/rules/Rules.scss
@@ -16,6 +16,7 @@
     .rulesBlock {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
+        grid-gap: 10px;
 
         .rule {
             display: flex;
