--- a/client/src/components/whatAreNftCoffins/WhatAreNftCoffins.scss
+++ b/client/src/components/whatAreNftCoffins/WhatAreNftCoffins.scss
@@ -6,6 +6,7 @@
     justify-content: center;
     align-items: center;
     padding: 0 16px;
+    max-width: 900px;
 
     .title {
         margin-bottom: 60px;
@@ -44,6 +45,7 @@
                 .description {
                     @include font(xs, $clr-gray);
                     word-break: break-word;
+                    text-align: justify;
                 }
             }
 
