next mint component

--- a/client/src/styles/variables.scss
+++ b/client/src/styles/variables.scss
@@ -27,6 +27,7 @@ $clr-white: #ffffff;
 $clr-black: #000000;
 $clr-gray: #616161;
 $clr-blue: #2a6fd6;
+$clr-brown: #63554a;
 
 $clr-god: #78dcfd;
 $clr-legendary: #a993e0;
