--- a/client/src/components/whatAreNftCoffins/WhatAreNftCoffins.scss
+++ b/client/src/components/whatAreNftCoffins/WhatAreNftCoffins.scss
@@ -20,32 +20,32 @@
 
         .point {
             display: flex;
+            flex-direction: column;
 
             > * {
                 margin-bottom: 16px;
             }
 
             img {
+                float: left;
+
                 height: 80px;
                 width: 80px;
 
                 margin-right: 36px;
+                margin-bottom: 21px;
             }
 
             .descriptionBlock {
-                display: flex;
-                flex-direction: column;
+                text-align: justify;
 
                 .subtitle {
                     @include font(md, $clr-black, bold);
-
-                    margin-bottom: 12px;
                 }
 
                 .description {
                     @include font(xs, $clr-gray);
                     word-break: break-word;
-                    text-align: justify;
                 }
             }
 
